# cSnake

./: :q  CMakeLists.txt  LICENSE  Makefile  README.md  cSnakeConfig.h.in  consts.h
cDynamPointArr/: CMakeLists.txt  dynamPointArr.c  dynamPointArr.h
headers/: .snake.h.swp  apple.h  main.h  point.h  snake.h  ui.h
src/: apple.c  main.c  snake.c  snakeStruct.c  ui.c
